# cookiecutter-python

./: .dockerignore  .env.example  .envrc  .gitignore  .prettierignore  .prettierrc.yaml  Brewfile  CHANGELOG.md  Dockerfile  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  setup.cfg
src/app/: main.py
